--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </footer>
             </section>
             <aside>
-                <h3>Liste récapitulative des éléments de section HTML5</h3>
+                <h3>Liste récapitulative des éléments de section HTML5.</h3>
                 <ul>
                     <li>section</li>
                     <li>article</li>
